--- a/src/main/webapp/JSPWeb/CSS/CSS_Login.css
+++ b/src/main/webapp/JSPWeb/CSS/CSS_Login.css
@@ -230,6 +230,7 @@ body {
 }
 
 .wrapper_Register .login{
+    display: block;
     font-size: 14.5px;
     text-align: center;
     margin: 20px 0 15px;
@@ -241,6 +242,22 @@ body {
 }
 .login p a:hover{
     text-decoration: underline;
+}
+.mxh_register {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 15px;
+}
+
+.mxh_register i {
+    font-size: 30px;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.mxh_register i:hover {
+    transform: scale(1.2);
 }
 
 /* Giao Thoa Login_Register */
